--- a/vp1575.html
+++ b/vp1575.html
@@ -451,7 +451,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             const cognitoIdentityPoolId = 'ap-southeast-2:bdbefb3f-3d09-464a-a3c8-c3015d466b1a';
-            const awsRegion = 'ap-northeast-1';
+            const awsRegion = 'ap-southeast-2';
             const s3BucketName = '1575-vp-program';
 
             const now = new Date();
