--- a/vp1575.html
+++ b/vp1575.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+
+<script>
+console.log('★スクリプト読み込み開始！');
+</script>	
+	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>1575副大統領状況</title>
