--- a/vp1575.html
+++ b/vp1575.html
@@ -516,7 +516,7 @@ console.log('★スクリプト読み込み開始！');
                             .then(data => {
                                 const lines = data.trim().split('\n');
                                 if (lines.length > 0) {
-                                    const [title, fileName] = lines[0].split(' ');
+                                    const [title, fileName] = lines[0].trim().split(/\s+/);
                                     // 画像を更新
 				    const trimmedFileName = fileName.trim();
             			    const imgSrc = fileName.startsWith('http') ? fileName : s3BaseUrl + fileName.trim();
@@ -545,7 +545,7 @@ console.log('★スクリプト読み込み開始！');
                     let recentScreenshotFound = false;
 
                     lines.forEach(line => {
-                        const [title, fileName] = line.split(' ');
+                        const [title, fileName] = line.trim().split(/\s+/);
                         if (isWithinFiveMinutes(title)) {
                             recentScreenshotFound = true;
                         }
@@ -797,7 +797,7 @@ console.log('★スクリプト読み込み開始！');
                                     let currentImageUrl = '';
                                     
                                     if (lines.length > 0) {
-                                        const [title, fileName] = lines[0].split(' ');
+                                        const [title, fileName] = lines[0].trim().split(/\s+/);
                                         currentImageUrl = fileName.trim();
                                     }
                                     
