--- a/vp1575.html
+++ b/vp1575.html
@@ -547,10 +547,13 @@ console.log('★スクリプト読み込み開始！');
                 .then(text => {
 		　　console.log('list.txt の読み込み成功:', text); // ← ここに入れる！
                     const lines = text.trim().split('\n');
+		　　console.log('list.txt のsplit成功1:', lines); // ← ここに入れる！
                     let recentScreenshotFound = false;
 
                     lines.forEach(line => {
                         const [title, fileName] = line.trim().split(/\s+/);
+			    console.log('list.txt のsplit成功2:', title); // ← ここに入れる！
+			    console.log('list.txt のsplit成功2:', fileName); // ← ここに入れる！
                         if (isWithinFiveMinutes(title)) {
                             recentScreenshotFound = true;
                         }
