--- a/vp1575.html
+++ b/vp1575.html
@@ -554,6 +554,9 @@ console.log('★スクリプト読み込み開始！');
 			    console.log('list.txt のsplit成功2:', fileName); // ← ここに入れる！
                         if (isWithinFiveMinutes(title)) {
                             recentScreenshotFound = true;
+			console.log('isWithinFiveMinutesがtrue:');
+			 } else {	
+			console.log('isWithinFiveMinutesがfalse:');
                         }
                     });
 
