--- a/vp1575.html
+++ b/vp1575.html
@@ -731,8 +731,8 @@
                     const naturalHeight = image.naturalHeight;
                     
                     // BlueStacksの実際の画像サイズ（クライアント領域）
-                    const BLUESTACKS_IMAGE_WIDTH = 384;    // 画像の幅
-                    const BLUESTACKS_IMAGE_HEIGHT = 687;   // 画像の高さ
+                    const BLUESTACKS_IMAGE_WIDTH = 540;    // 画像の幅384
+                    const BLUESTACKS_IMAGE_HEIGHT = 950;   // 画像の高さ687
                     
                     // 表示画像上のクリック位置を、実際の画像サイズに変換
                     const imageX = Math.round((x / displayedWidth) * BLUESTACKS_IMAGE_WIDTH);
