--- a/vp1575.html
+++ b/vp1575.html
@@ -903,8 +903,7 @@
         <p id="tap-anywhere">画像の任意の場所をタップできます（20秒待ちます）</p>
         
         <div id="image-container">
-            //<img id="game-image" src="screenshot2.jpg" alt="ゲームスクリーンショット">
-	    <img id="game-image" alt="ゲームスクリーンショット">
+            <img id="game-image" src="screenshot2.jpg" alt="ゲームスクリーンショット">
             <div id="spinner-overlay">
                 <div class="spinner"></div>
                 <div id="countdown">20</div>
