--- a/vp1575.html
+++ b/vp1575.html
@@ -321,12 +321,12 @@
                 status: "稼働状況：",
                 running: "【自動副大統領起動中】",
                 stopped: "【自動副大統領停止中】",
-                appoint: "先頭の副大統領候補者を任命",
-                kick: "先頭の副大統領候補者をキック(実装テスト中)",
+                appoint: "先頭の副大統領候補者を [任命]",
+                kick: "先頭の副大統領候補者を [キック]",
                 maintenance: "メンテナンスモードにする",
                 maintenanceMode: "メンテナンスモード中です",
                 endMaintenance: "メンテナンスモード終了",
-                restart: "強制再起動(メンテナンスモードが使えない場合に使用ください)",
+                restart: "強制再起動(メンテナンスモード不可時用)",
                 tapInstruction: "タップ指示",
                 tapAnywhere: "画像の任意の場所をタップできます（20秒待ちます）",
                 tapPosition: "ここにクリック位置が表示されます",
